[package]
name = "room-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"  # MessagePack 序列化（减少60%数据量）

# 物理引擎
rapier3d = "0.19"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 随机数
rand = "0.8"

# 网络框架
bytes = "1.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "physics_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
